@@ -125,7 +125,6 @@ LUFA_PATH = ../../../..
 # LUFA library compile-time options
 LUFA_OPTS  = -D USE_NONSTANDARD_DESCRIPTOR_NAMES
 LUFA_OPTS += -D USB_HOST_ONLY
-LUFA_OPTS += -D NO_STREAM_CALLBACKS
 LUFA_OPTS += -D USE_STATIC_OPTIONS="(USB_OPT_REG_ENABLED | USB_OPT_AUTO_PLL)"
 
 
